--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
       to   { opacity: 1; }
     }
 
-    img {
+    body {
+      color: white;
+      background: black;
+      min-height: 100vh;
+    }
+
+    img.hero {
       margin-top: 50px;
       margin-left: 30px;
       animation-name: slideInDown;
@@ -41,20 +47,105 @@
       animation-timing-function: cubic-bezier(0,1.29,.59,1.6);
     }
 
-    code {
+    header code {
       padding: 0 4px;
       border-radius: 4px;
-      background-color: #eee;
+      background-color: #444;
+    }
+
+    header {
+      margin-top: -150px;
+      margin-left: 250px;
+      animation: fadein 6s;
+    }
+
+    header h1 {
+      font-size: 60px;
+    }
+
+    header p.instruction {
+      font-size: 20px;
+      font-weight: 400;
+    }
+
+    footer {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+    }
+
+    footer a {
+      text-decoration: none;
+      color: white;
+    }
+
+    @media only screen and (max-width: 600px) {
+      img.hero {
+        width: 150px;
+        margin-left: 20px;
+      }
+
+      header {
+        margin-left: 150px;
+        margin-top: -250px;
+        width: 200px;
+      }
+
+      header h1 {
+        font-size: 40px;
+      }
+    }
+
+    .player-view .front {
+      position: absolute;
+      top: 50px;
+      right: 50px;
+      animation: fadein 6s;
+    }
+
+    h2 {
+      font-size: 30px;
+    }
+
+    .player-view .back {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -100;
+      transition: opacity 6s;
+      opacity: 0;
+    }
+
+    .player-view .back.active {
+      opacity: 1;
+    }
+
+    .player-view .front img {
+      width: 350px;
+      border-radius: 10px;
+      box-shadow: 4px 4px 22px -2px rgba(0,0,0,0.75);
+      margin-bottom: 30px;
+    }
+
+    .player-view .back img {
+      min-width: 100vw;
+      backdrop-filter: blur(20px);
+      opacity: .3;
     }
   </style>
 </head>
-<body class="container mx-auto">
+<body>
   <main>
-    <img src="assets/note.svg" />
-    <div style="margin-top: -150px; margin-left: 250px; animation: fadein 6s">
-      <h1 style="font-size: 60px;"> Delhi FM</h1>
-      <p style="font-size: 20px; font-weight: 400">Press <code style="font-size: 20px;">Space</code> or Tap to <span style="font-size: 16px;">▶️</span></p>
-    </div>
+    <img class="hero" src="assets/note.svg" />
+    <header class="header">
+      <h1> Delhi FM</h1>
+      <p class="instruction">Press <code>Space</code> or Tap to <span class="action">▶️</span></p>
+    </header>
+
+    <footer>
+      <a target="_blank" href="https://www.buymeacoffee.com/debdut">❤️ Buy Me a Coffee</a>
+      <a target="_blank" href="https://twitter.com/KarmakarDebdut">🐦 Twitter</a>
+    </footer>
   </main>
 </body>
 <script src="main.js"></script>
