--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     body {
       color: white;
       background: black;
-      min-height: 100vh;
+      height: 100vh;
     }
 
     img.hero {
@@ -114,6 +114,8 @@
       z-index: -100;
       transition: opacity 6s;
       opacity: 0;
+      height: 100vh;
+      overflow: hidden;
     }
 
     .player-view .back.active {
