--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     body {
       color: white;
       background: black;
-      min-height: 100vh;
+      height: 100vh;
     }
 
     img.hero {
@@ -114,6 +114,8 @@
       z-index: -100;
       transition: opacity 6s;
       opacity: 0;
+      height: 100vh;
+      overflow: hidden;
     }
 
     .player-view .back.active {
@@ -136,7 +138,7 @@
 </head>
 <body>
   <main>
-    <img class="hero" src="assets/note.svg" />
+    <img class="hero" src="assets/note.3.svg" />
     <header class="header">
       <h1> Delhi FM</h1>
       <p class="instruction">Press <code>Space</code> or Tap to <span class="action">▶️</span></p>
@@ -148,5 +150,5 @@
     </footer>
   </main>
 </body>
-<script src="main.js"></script>
+<script src="main.3.js"></script>
 </html>
