--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   <link rel="shortcut icon" href="assets/favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
   <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Delhi FM | Bollywood Lofi">
+  <meta name="description" content="Relax your mind and work while playing Delhi FM, the Bollywood Lofi Channel">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://delhifm.live/">
+  <meta property="og:title" content="Delhi FM | Bollywood Lofi">
+  <meta property="og:description" content="Relax your mind and work while playing Delhi FM, the Bollywood Lofi Channel">
+  <meta property="og:image" content="http://delhifm.live/music/Oh%20Delhi/cover.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://delhifm.live/">
+  <meta property="twitter:title" content="Delhi FM | Bollywood Lofi">
+  <meta property="twitter:description" content="Relax your mind and work while playing Delhi FM, the Bollywood Lofi Channel">
+  <meta property="twitter:image" content="http://delhifm.live/music/Oh%20Delhi/cover.jpg">
+  
   <style>
     * {
       box-sizing: border-box;
@@ -138,7 +156,7 @@
 </head>
 <body>
   <main>
-    <img class="hero" src="assets/note.3.svg" />
+    <img class="hero" src="assets/note.4.svg" />
     <header class="header">
       <h1> Delhi FM</h1>
       <p class="instruction">Press <code>Space</code> or Tap to <span class="action">▶️</span></p>
@@ -150,5 +168,5 @@
     </footer>
   </main>
 </body>
-<script src="main.3.js"></script>
+<script src="main.4.js"></script>
 </html>
