--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" href="/assets/apple-touch-icon-180x180.png"/>
+
   <title>Delhi FM | Bollywood Lofi</title>
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
   <link rel="shortcut icon" href="assets/favicon.ico">
