shuffle and next

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       padding: 0;
       margin: 0;
       font-family: 'Architects Daughter', cursive;
+      cursor: default;
     }
 
     @keyframes slideInDown {
@@ -159,7 +160,9 @@
     <img class="hero" src="assets/note.svg" />
     <header class="header">
       <h1> Delhi FM</h1>
-      <p class="instruction">Press <code>Space</code> or Tap to <span class="action">▶️</span></p>
+      <p class="instruction">Press <code>Space</code> or Tap to <span style="font-size: 30px;" class="toggle">▶️</span> </p>
+      <br>
+      <p style="font-size: 30px;"> <span class="shuffle">🔀</span> <span class="next">⏭</span> </p>
     </header>
 
     <footer>
