shuffle and next

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" href="/assets/apple-touch-icon-180x180.png"/>
-
   <title>Delhi FM | Bollywood Lofi</title>
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
   <link rel="shortcut icon" href="assets/favicon.ico">
@@ -35,6 +33,7 @@
       padding: 0;
       margin: 0;
       font-family: 'Architects Daughter', cursive;
+      cursor: default;
     }
 
     @keyframes slideInDown {
@@ -158,10 +157,12 @@
 </head>
 <body>
   <main>
-    <img class="hero" src="assets/note.4.svg" />
+    <img class="hero" src="assets/note.5.svg" />
     <header class="header">
       <h1> Delhi FM</h1>
-      <p class="instruction">Press <code>Space</code> or Tap to <span class="action">▶️</span></p>
+      <p class="instruction">Press <code>Space</code> or Tap to <span style="font-size: 30px;" class="toggle">▶️</span> </p>
+      <br>
+      <p style="font-size: 30px;"> <span class="shuffle">🔀</span> <span class="next">⏭</span> </p>
     </header>
 
     <footer>
@@ -170,5 +171,5 @@
     </footer>
   </main>
 </body>
-<script src="main.4.js"></script>
+<script src="main.5.js"></script>
 </html>
